# verify

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  example.cpp  resolve.json  waf  wscript
.github/workflows/: clang-format.yml  cpp-internal.yml  linux_cmake.yml  linux_mkspecs.yml  macos_cmake.yml  macos_mkspecs.yml  no-libassert.yml  raspberrypi.yml  valgrind.yml  windows_cmake.yml  windows_mkspecs.yml
example/: simple.cpp
include/: verify.hpp
include/backends/: assert.hpp  libassert.hpp  stub.hpp
include/steinwurf/: verify.hpp
include/steinwurf/verify_backends/: assert.hpp  libassert.hpp  stub.hpp
include/verify/: verify.hpp  verify_variadic_macro.hpp  verify_variadic_overload_macro.hpp
include/verify/backends/: assert.hpp  libassert.hpp  stub.hpp
src/: verify.cpp
src/verify/: verify.cpp  verify.hpp  verify_variadic_overload_macro.hpp
src/verify/backends/: assert.hpp
test/: verify_tests.cpp
test/src/: is_running_valgrind.hpp  test_verify.cpp
